Finish project for exam